--- a/css/styles.css
+++ b/css/styles.css
@@ -365,3 +365,25 @@ figure{width: 100%; height: 250px; overflow: hidden;}
         max-width: 50%;
     }
 }
+
+.instagram iframe {
+    margin: 0 auto;
+}
+
+@media (max-width: 768px) {
+    .instagram iframe {
+        height: 700px;
+    }
+}
+
+@media (max-width: 500px) {
+    .instagram iframe {
+        height: 500px;
+    }
+}
+
+@media (max-width: 400px) {
+    .instagram iframe {
+        height: 400px;
+    }
+}
