--- a/css/style.css
+++ b/css/style.css
@@ -446,7 +446,7 @@ Secondary Fixed Navigation
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   }
   .cd-secondary-nav.animate-children li a {
-    padding: 26px 30px 0 30px;
+    padding: 26px 20px 0;
   }
   .cd-secondary-nav.animate-children li a span {
     opacity: 0;
